--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <span class="toggle" >☠</span>
         <span class="ripple" ></span>
     </div>
-    <div class="pass-strenght" >
-        <div class="strenght-percent" > <span></span> </div>
-        <span class="strenght-label" >strenght</span>
+    <div class="pass-strength" >
+        <div class="strength-percent" > <span></span> </div>
+        <span class="strength-label" >strenght</span>
 
     </div>
 
@@ -28,3 +28,4 @@
 
 </body>
 </html>
+
